==> Bridgetek/EveApps/common/eve_hal/EVE_HalImpl_RP2040.c <==
#include "EVE_HalImpl.h"
#include "EVE_Platform.h"

EVE_HAL_EXPORT void EVE_Hal_info(EVE_DeviceInfo *deviceInfo, size_t deviceIdx)
{
	memset(deviceInfo, 0, sizeof(EVE_DeviceInfo));
	strcpy_s(deviceInfo->DisplayName, sizeof(deviceInfo->DisplayName), deviceIdx ? "RP2040 SPI1" : "RP2040 SPI0");
	strcpy_s(deviceInfo->SerialNumber, sizeof(deviceInfo->SerialNumber), deviceIdx ? "RP2040 SPI1" : "RP2040 SPI0");
	deviceInfo->Opened = s_SpiOpened[deviceIdx];
	deviceInfo->Host = EVE_HOST_EMBEDDED;
}

void setSPI(EVE_HalContext *phost, EVE_SPI_CHANNELS_T numchnls, uint8_t numdummy)
{
	/* SPI initialisation. This will use SPI at 1MHz */
	size_t deviceIdx = phost->SpiPort == spi1 ? 1 : 0;
	spi_init(phost->SpiPort, 1000 * 1000);
	gpio_set_function(phost->SpiMisoPin, GPIO_FUNC_SPI);
	gpio_set_function(phost->SpiMosiPin, GPIO_FUNC_SPI);
	gpio_set_function(phost->SpiSckPin, GPIO_FUNC_SPI);

	/* Chip select is active-low, so we'll initialise it to a driven-high state */
	gpio_init(phost->SpiCsPin);
	gpio_set_dir(phost->SpiCsPin, GPIO_OUT);
	gpio_put(phost->SpiCsPin, 1);

	/* Only support single channel */
	phost->SpiChannels = EVE_SPI_SINGLE_CHANNEL;
	phost->SpiDummyBytes = 1;
}

bool EVE_HalImpl_open(EVE_HalContext *phost, const EVE_HalParameters *parameters)
{
	phost->SpiPort = parameters->DeviceIdx ? spi1 : spi0;
	phost->SpiCsPin = parameters->SpiCsPin;
	phost->SpiSckPin = parameters->SpiSckPin;
	phost->SpiMosiPin = parameters->SpiMosiPin;
	phost->SpiMisoPin = parameters->SpiMisoPin;
	phost->PowerDownPin = parameters->PowerDownPin;

	eve_printf_debug("Open port %s for EVE\n", parameters->DeviceIdx ? "SPI1" : "SPI0");
	eve_printf_debug("CS: GP%i, SCK: GP%i, MOSI: GP%i, MISO: GP%i, PWD: GP%i\n",
	    (int)phost->SpiCsPin, (int)phost->SpiSckPin, (int)phost->SpiMosiPin,
	    (int)phost->SpiMisoPin, (int)phost->PowerDownPin);

#ifdef EVE_MULTI_GRAPHICS_TARGET
	phost->GpuDefs = &EVE_GpuDefs_FT80X;
#endif

	gpio_init(phost->PowerDownPin);
	gpio_set_dir(phost->PowerDownPin, GPIO_OUT);
	gpio_put(phost->PowerDownPin, 0);

	/* Initialize single channel */
	setSPI(phost, EVE_SPI_SINGLE_CHANNEL, 1);

	gpio_put(phost->PowerDownPin, 1);

	/* Initialize the context variables */
	phost->Status = EVE_STATUS_OPENED;
	++g_HalPlatform.OpenedDevices;
	++s_SpiOpened[parameters->DeviceIdx];

	return true;
}

void EVE_HalImpl_close(EVE_HalContext *phost)
{
	size_t deviceIdx = phost->SpiPort == spi1 ? 1 : 0;
	phost->Status = EVE_STATUS_CLOSED;
	--s_SpiOpened[deviceIdx];
	--g_HalPlatform.OpenedDevices;
	if (!s_SpiOpened[deviceIdx])
	{
		spi_deinit(phost->SpiPort);
	}
}

void EVE_Hal_startTransfer(EVE_HalContext *phost, EVE_TRANSFER_T rw, uint32_t addr)
{
	eve_assert(phost->Status == EVE_STATUS_OPENED);

	if (rw == EVE_TRANSFER_READ)
	{
		eve_assert(3 + phost->SpiDummyBytes <= 5);
		uint8_t spidata[5];
		spidata[0] = (addr >> 16);
		spidata[1] = (addr >> 8);
		spidata[2] = addr & 0xff;
		csSelect(phost);
		spi_write_blocking(phost->SpiPort, spidata, 3 + phost->SpiDummyBytes);
		phost->Status = EVE_STATUS_READING;
	}
	else
	{
		uint8_t spidata[4];
		spidata[0] = (0x80 | (addr >> 16));
		spidata[1] = (addr >> 8);
		spidata[2] = addr;

		csSelect(phost);
		spi_write_blocking(phost->SpiPort, spidata, 3);

		phost->Status = EVE_STATUS_WRITING;
	}
}

static inline void rdBuffer(EVE_HalContext *phost, uint8_t *buffer, uint32_t size)
{
	spi_read_blocking(phost->SpiPort, 0, buffer, size);
}

static inline void wrBuffer(EVE_HalContext *phost, const uint8_t *buffer, uint32_t size)
{
	spi_write_blocking(phost->SpiPort, buffer, size);
}

bool EVE_Hal_powerCycle(EVE_HalContext *phost, bool up)
{
	if (up)
	{
		/* Power down */
		gpio_put(phost->PowerDownPin, 0);
		EVE_sleep(20);
		
		/* Reset the core, in case PD pin is not wired */
		EVE_Hal_hostCommand(phost, EVE_CORE_RESET);
		setSPI(phost, EVE_SPI_SINGLE_CHANNEL, 1);
		EVE_sleep(20);
		
		/* Power up */
		gpio_put(phost->PowerDownPin, 1);
		EVE_sleep(20);
	}
	else
	{
		/* Power down */
		gpio_put(phost->PowerDownPin, 0);
		EVE_sleep(20);

		/* Reset the core, in case PD pin is not wired */
		EVE_Hal_hostCommand(phost, EVE_CORE_RESET);
		setSPI(phost, EVE_SPI_SINGLE_CHANNEL, 1);
	}
	return true;
}

uint64_t EVE_millis64()
{
	updateMillis();
	return s_TotalMilliseconds64;
}
